<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laisCouto.eduedu.view.SearchStudentActivity">

    <TextView
        android:id="@+id/text_select_stundent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/selecionar_aluno"
        android:textSize="18sp"
        android:textColor="@color/blue_clear"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:background="@drawable/bord_search"
        android:ems="10"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/text_select_stundent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/text_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search"
        android:text="@string/filter"
        android:textSize="14sp"
        android:textColor="@color/blue_clear"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_name"
        android:textStyle="bold"
        android:textSize="10sp"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:text="@string/name"
        android:background="@drawable/bt_login"
        tools:ignore="MissingConstraints,SmallSp"
        app:layout_constraintTop_toBottomOf="@id/text_filter"
        app:layout_constraintStart_toStartOf="@id/text_filter"
        android:layout_marginTop="4dp"
        />

    <Button
        android:textColor="@color/blue_clear"
        android:textStyle="bold"
        android:textSize="10sp"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:text="@string/year"
        android:background="@drawable/bt_forg_pass"
        tools:ignore="MissingConstraints,SmallSp"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:background="#E5E5E5"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="479dp"
        app:layout_constraintBottom_toTopOf="@id/toolbar_bottom"
        app:layout_constraintTop_toBottomOf="@id/bt_name"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:src="@drawable/ic_baseline_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blue_clear"
        android:contentDescription="@string/todo" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_toolbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7F7F7"
            android:paddingStart="64dp"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/blue_clear"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.appbar.AppBarLayout>
    
    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar_bottom"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_home_24"/>

    <ImageView
        android:id="@+id/studant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar_bottom"
        android:layout_marginTop="23dp"
        android:layout_marginStart="47dp"
        app:layout_constraintStart_toEndOf="@id/home"
        android:src="@drawable/ic_vector_alun"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:textColor="#21A2DA"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/studant"
        app:layout_constraintStart_toEndOf="@id/studant"/>

    <Button
        android:layout_marginStart="22dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_studant"
        app:layout_constraintTop_toTopOf="@id/toolbar_bottom"
        app:layout_constraintStart_toEndOf="@id/home"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_bottom"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar_bottom"
        android:layout_marginTop="20dp"
        android:layout_marginStart="140dp"
        app:layout_constraintStart_toEndOf="@id/studant"
        android:src="@drawable/ic_vector_interr"/>


    <ImageView
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar_bottom"
        android:layout_marginTop="21dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toEndOf="@id/info"
        android:src="@drawable/ic_ectorrrrr"/>






</androidx.constraintlayout.widget.ConstraintLayout>